Adicionando tags de acessibilidade

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                     <h2 data-anima-texto>Desenvolvedor Web</h2>
                     <div class="btn-container">
                         <a href="#" class="botao-contato btn-gradient" tabindex="1">
-                            Download C/V
+                            <span lang="en-us">Download</span> 
+                            <abbr title="Currículo Virtual">C/V</abbr>
                         </a>
                         <a href="https://www.linkedin.com/in/arthur-santos-3b61a8267/" target="_blank" class="botao-contato" id="gradient-hover" tabindex="1">
                             LinkedIn
