Adicionando projetos e funções de interação

--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
         <section class="conteudo" id="about" data-animar="false">
             <h2 class="heading">Sobre Mim</h2>
             <p>
-                Meu nome é Arthur Santos, fã de video-games e
+                Meu nome é Arthur Santos, tenho 
+                <span id="age" style="color: inherit">_</span> anos, fã de video-games e
                 fascinado por tecnologia; Programador com experiência
                 em HTML, CSS, JavaScript, TypeScript e Python;
                 Meu primeiro contato com programação foi aos 14 anos,
@@ -136,10 +137,10 @@
                 
                 <div 
                 class="project-container active-right"
-                style="background-image: url('./index_assets/imgs/bg-slider.png');">
+                style="background-image: url('./assets/imgs/projects_imgs/floricultura.png');">
                     <div class="link-container">
-                        <a href="https://github.com/xDef4lt/background-slider"  target="_blank" class="botao-link">Acessar código</a>
-                        <a href="./projetos/bg-slider/index.html" target="_blank" class="botao-link">Acessar página</a>
+                        <a href="https://github.com/xDef4lt/floricultura"  target="_blank" class="botao-link">Acessar código</a>
+                        <a href="https://xdef4lt.github.io/floricultura/" target="_blank" class="botao-link">Acessar página</a>
                     </div>
                 </div>
 
