Atualizando navegação pelo teclado

--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@
             <h2 class="heading">Projetos</h2>
         
             <div class="slider-projetos">
-                <button class="arrow-btn-left">
-                    <i class="fa-solid fa-circle-arrow-left arrow-btn arrow-btn-left" tabindex="1"></i>
+                <button class="arrow-btn-left" tabindex="1">
+                    <i class="fa-solid fa-circle-arrow-left arrow-btn arrow-btn-left"></i>
                 </button>
-                <button class="arrow-btn-right">
-                    <i class="fa-solid fa-circle-arrow-right arrow-btn arrow-btn-right" tabindex="1"></i>
+                <button class="arrow-btn-right" tabindex="1">
+                    <i class="fa-solid fa-circle-arrow-right arrow-btn arrow-btn-right"></i>
                 </button>
                 
                 <div class="project-container active-right">
@@ -192,11 +192,11 @@
             <h2 class="heading">Serviços</h2>
 
             <div class="slider">
-                <button class="slider-btn left">
-                    <i class="fa-solid fa-circle-arrow-left" tabindex="1"></i>
+                <button class="slider-btn left" tabindex="1">
+                    <i class="fa-solid fa-circle-arrow-left"></i>
                 </button>
-                <button class="slider-btn right">
-                    <i class="fa-solid fa-circle-arrow-right" tabindex="1"></i>
+                <button class="slider-btn right" tabindex="1">
+                    <i class="fa-solid fa-circle-arrow-right"></i>
                 </button>
 
                 <article class="slide active-right">
