Atualizando seção Sobre

--- a/index.html
+++ b/index.html
@@ -70,30 +70,33 @@
         <section class="conteudo" id="about" data-animar="false">
             <h2 class="heading">Sobre Mim</h2>
             <p>
-                Olá, eu sou Arthur Santos, tenho <span style="color: inherit" id="age">_</span> anos, sou um desenvolvedor web 
-                apaixonado por tecnologia e entusiasta de videogames; 
-                Tenho experiência em programação utilizando <strong>HTML, CSS, JavaScript, TypeScript e Python;</strong> 
-                Meu primeiro contato com programação foi aos 14 anos, mas foi aos 16 anos, quando ingressei no 
-                curso de Informática para Internet na <abbr title="Fundação Instituto de Educação de Barueri">FIEB</abbr>, 
+                Olá, me chamo Arthur Santos, tenho <span id="age">_</span> anos e sou um desenvolvedor web apaixonado por 
+                tecnologia e entusiasta de videogames. Tenho experiência em programação utilizando 
+                <strong>HTML, CSS, JavaScript, TypeScript e Python</strong>, com foco em <strong>Programação Orientada a Objetos (POO)</strong>; 
+                Meu primeiro contato com programação foi aos 14 anos, mas foi aos 16 anos, quando ingressei no curso de 
+                Informática para Internet na <abbr title="Fundação Instituto de Educação de Barueri">FIEB</abbr>, 
                 que comecei a me dedicar a essa área de forma mais intensa;
             </p>
             <p>
-                Embora meu foco principal seja a programação, também possuo conhecimentos 
-                básicos de web design e uso de ferramentas como Axure e Figma;
+                Além da programação, possuo conhecimentos em web design, utilizando a abordagem 
+                <strong lang="en-us">Mobile First e Progressive Enhancement</strong> 
+                para criar sites responsivos e acessíveis em diversas plataformas;
             </p>
             <p>
-                Nesta jornada, desenvolvi habilidades sólidas em diferentes tecnologias, 
-                incluindo HTML, CSS, JavaScript, TypeScript, Bootstrap, NodeJS e Python; 
-                Com essas habilidades, sou capaz de criar soluções web criativas e funcionais;
+                Nesta jornada, desenvolvi habilidades sólidas em diferentes tecnologias, incluindo HTML5, CSS3, JavaScript, TypeScript, 
+                Bootstrap, NodeJS e Python3, aplicando conceitos de POO para criar soluções web criativas e funcionais;
             </p>
             <p>
-                Estou sempre em busca de novos desafios e oportunidades para expandir meu conhecimento 
-                e contribuir para projetos emocionantes; Se você está procurando um desenvolvedor web 
-                apaixonado e comprometido, entre em contato comigo através do <strong>LinkedIn</strong> 
-                ou faça o download do meu currículo para saber mais sobre minha experiência e habilidades;
+                Estou sempre em busca de novos desafios e oportunidades para expandir meu conhecimento e contribuir para projetos emocionantes; 
+                Se você está procurando um desenvolvedor web apaixonado e comprometido, entre em contato comigo através do 
+                <a href="https://www.linkedin.com/in/arthur-santos-3b61a8267/">LinkedIn</a> ou faça acesse meu currículo para saber mais sobre 
+                minha experiência e habilidades;
+            </p>
+            <p>
                 Estou ansioso para colaborar e transformar suas ideias em realidade!
             </p>
         </section>
+
         
         <section class="conteudo" id="skills" data-animar="false">
             <h2 class="heading">Conhecimentos</h2>
