--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                 para criar sites responsivos e acessíveis em diversas plataformas;
             </p>
             <p>
-                Nesta jornada, desenvolvi habilidades sólidas em diferentes tecnologias, incluindo HTML5, CSS3, JavaScript, TypeScript, 
-                Bootstrap, NodeJS e Python3, aplicando conceitos de POO para criar soluções web criativas e funcionais;
+                Nesta jornada, desenvolvi habilidades sólidas em diferentes tecnologias, incluindo HTML5, CSS, JavaScript, TypeScript, 
+                Bootstrap, NodeJS e Python, aplicando conceitos de POO para criar soluções web criativas e funcionais;
             </p>
             <p>
                 Estou sempre em busca de novos desafios e oportunidades para expandir meu conhecimento e contribuir para projetos emocionantes; 
