--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Links CSS-->
+    <!--Links-->
+    
+    <!--Favicon-->
     <link rel="shortcut icon" href="./assets/imgs/tankman.webp" type="image/x-icon">
-    <!--CSS Principal-->
+    <!--CSS-->
     <link rel="stylesheet" href="./components/css/style.css">
 
     <!--Link FontAwesome-->
