--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <img class="pfp" src="./assets/imgs/perfil.png" alt="Foto de perfil ilustrativa de Arthur Santos">
                 </div>
                 <div class="info-container animate">
-                    <h1>Prazer, <span>Arthur Santos</span></h1>
+                    <h1>Prazer, <wbr> <span>Arthur Santos</span></h1>
                     <h2 data-anima-texto>Desenvolvedor Web</h2>
                     <div class="btn-container">
                         <a href="#" class="botao-contato btn-gradient" tabindex="1" id="download-cv">
