--- a/index.html
+++ b/index.html
@@ -141,53 +141,82 @@
         <section class="conteudo" id="projects" data-animar="false">
             <h2 class="heading">Projetos</h2>
         
-            <div class="slider-projetos">
-                <button class="arrow-btn-left" tabindex="1">
-                    <i class="fa-solid fa-circle-arrow-left arrow-btn arrow-btn-left"></i>
-                </button>
-                <button class="arrow-btn-right" tabindex="1">
-                    <i class="fa-solid fa-circle-arrow-right arrow-btn arrow-btn-right"></i>
-                </button>
-                
-                <div class="project-container active-right">
-                    <img src="./assets/imgs/projects_imgs/floricultura.png" alt="Projeto 1: Floricultura">
-                    <div class="link-container">
-                        <a href="https://github.com/xDef4lt/floricultura"  target="_blank" class="botao-link">Acessar código</a>
-                        <a href="https://xdef4lt.github.io/floricultura/" target="_blank" class="botao-link">Acessar página</a>
-                    </div>
-                </div>
-
-                <div 
-                class="project-container">
-                <img src="./assets/imgs/projects_imgs/slider.png" alt="Projeto 2: Background-Slider JS">
-                    <div class="link-container">
-                        <a href="https://github.com/xDef4lt/background-slider"  target="_blank" class="botao-link">Acessar código</a>
-                        <a href="https://background-slider-tawny.vercel.app/" target="_blank" class="botao-link">Acessar página</a>
-                    </div>
-                </div>
-
-                <div 
-                class="project-container">
-                <img src="./assets/imgs/projects_imgs/previsao-do-tempo.png" alt="Projeto 3: Previsão do Tempo">
-                    <div class="link-container">
-                        <a href="https://github.com/xDef4lt/previsaoDoTempo"  target="_blank" class="botao-link">Acessar código</a>
-                        <a href="https://previsao-do-tempo-jet.vercel.app/" target="_blank" class="botao-link">Acessar página</a>
-                    </div>
-                </div>
-
+            <div class="flexible-container">
                 <div class="project-container">
-                    <img src="./assets/imgs/projects_imgs/relogio.png" alt="Projeto 4: Relógio Digital">
-                    <div class="link-container">
-                        <a href="https://github.com/xDef4lt/relogio"  target="_blank" class="botao-link">Acessar código</a>
-                        <a href="https://relogio-navy.vercel.app/" target="_blank" class="botao-link">Acessar página</a>
+                    <img class="img-projeto" src="./assets/imgs/quimicafacil.png" alt="Projeto QuimicaFacil">
+                    <div class="project-info">
+                        <h3>QuimicaFacil</h3>
+                        <img alt="svgHtml" class="lang-icon" src="./assets/svgs/html.svg">
+                        <img alt="svgCss" class="lang-icon" src="./assets/svgs/css.svg">
+                        <img alt="svgJs" class="lang-icon" src="./assets/svgs/js.svg">
                     </div>
-                </div>
-
-                <div class="project-container">
-                    <img src="./assets/imgs/projects_imgs/quimica-facil.png" alt="Projeto 5: QuímicaFácil">
                     <div class="link-container">
                         <a href="https://github.com/xDef4lt/quimicafacil"  target="_blank" class="botao-link">Acessar código</a>
                         <a href="https://quimicafacil.vercel.app/" target="_blank" class="botao-link">Acessar página</a>
+                    </div>
+                </div>
+
+                <div class="project-container">
+                    <img class="img-projeto" src="./assets/imgs/login.png" alt="Projeto Tela de Login">
+                    <div class="project-info">
+                        <h3>Tela de Login</h3>
+                        <img alt="svgHtml" class="lang-icon" src="./assets/svgs/html.svg">
+                        <img alt="svgCss" class="lang-icon" src="./assets/svgs/css.svg">
+                    </div>
+                    <div class="link-container">
+                        <a href="https://github.com/xDef4lt/login-animado" target="_blank" class="botao-link">Acessar código</a>
+                        <a href="https://login-animado-liart.vercel.app/" target="_blank" class="botao-link">Acessar página</a>
+                    </div>
+                </div>
+
+                <div class="project-container">
+                    <img class="img-projeto" src="./assets/imgs/calculadora.png" alt="Projeto Calculadora">
+                    <div class="project-info">
+                        <h3>Calculadora</h3>
+                        <img alt="svgHtml" class="lang-icon" src="./assets/svgs/html.svg">
+                        <img alt="svgJs" class="lang-icon" src="./assets/svgs/js.svg">
+                    </div>
+                    <div class="link-container">
+                        <a href="https://github.com/xDef4lt/calculadora-poo" target="_blank" class="botao-link">Acessar código</a>
+                        <a href="https://calculadora-poo.vercel.app/" target="_blank" class="botao-link">Acessar página</a>
+                    </div>
+                </div>
+
+                <div class="project-container">
+                    <img class="img-projeto" src="./assets/imgs/cadastro.png" alt="Projeto Cadastro">
+                    <div class="project-info">
+                        <h3>Tela Cadastro</h3>
+                        <img alt="svgHtml" class="lang-icon" src="./assets/svgs/html.svg">
+                        <img alt="svgCss" class="lang-icon" src="./assets/svgs/css.svg">
+                        <img alt="svgJs" class="lang-icon" src="./assets/svgs/js.svg">
+                    </div>
+                    <div class="link-container">
+                        <a href="https://github.com/xDef4lt/cadastro" target="_blank" class="botao-link">Acessar código</a>
+                        <a href="https://cadastro-ten.vercel.app/" target="_blank" class="botao-link">Acessar página</a>
+                    </div>
+                </div>
+                <div class="project-container">
+                    <img class="img-projeto" src="./assets/imgs/slider.png" alt="Projeto Slider JS">
+                    <div class="project-info">
+                        <h3>Slider</h3>
+                        <img alt="svgHtml" class="lang-icon" src="./assets/svgs/html.svg">
+                        <img alt="svgCss" class="lang-icon" src="./assets/svgs/css.svg">
+                        <img alt="svgJs" class="lang-icon" src="./assets/svgs/js.svg">
+                    </div>
+                    <div class="link-container">
+                        <a href="https://github.com/xDef4lt/slider-js" target="_blank" class="botao-link">Acessar código</a>
+                        <a href="https://slider-js-ten.vercel.app/" target="_blank" class="botao-link">Acessar página</a>
+                    </div>
+                </div>
+                <div class="project-container">
+                    <img class="img-projeto" src="./assets/imgs/relogio.png" alt="Projeto Relógio com JS">
+                    <div class="project-info">
+                        <h3>Relógio Digital</h3>
+                        <img alt="svgJs" class="lang-icon" src="./assets/svgs/js.svg">
+                    </div>
+                    <div class="link-container">
+                        <a href="https://github.com/xDef4lt/relogio" target="_blank" class="botao-link">Acessar código</a>
+                        <a href="https://relogio-navy.vercel.app/" target="_blank" class="botao-link">Acessar página</a>
                     </div>
                 </div>
             </div>
