--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         
             <div class="flexible-container">
                 <div class="project-container">
-                    <img class="img-projeto" src="./assets/imgs/quimicafacil.png" alt="Projeto QuimicaFacil">
+                    <img class="img-projeto" src="./assets/projects_imgs/imgs/quimicafacil.png" alt="Projeto QuimicaFacil">
                     <div class="project-info">
                         <h3>QuimicaFacil</h3>
                         <img alt="svgHtml" class="lang-icon" src="./assets/svgs/html.svg">
@@ -157,7 +157,7 @@
                 </div>
 
                 <div class="project-container">
-                    <img class="img-projeto" src="./assets/imgs/login.png" alt="Projeto Tela de Login">
+                    <img class="img-projeto" src="./assets/projects_imgs/imgs/login.png" alt="Projeto Tela de Login">
                     <div class="project-info">
                         <h3>Tela de Login</h3>
                         <img alt="svgHtml" class="lang-icon" src="./assets/svgs/html.svg">
@@ -170,7 +170,7 @@
                 </div>
 
                 <div class="project-container">
-                    <img class="img-projeto" src="./assets/imgs/calculadora.png" alt="Projeto Calculadora">
+                    <img class="img-projeto" src="./assets/projects_imgs/imgs/calculadora.png" alt="Projeto Calculadora">
                     <div class="project-info">
                         <h3>Calculadora</h3>
                         <img alt="svgHtml" class="lang-icon" src="./assets/svgs/html.svg">
@@ -183,7 +183,7 @@
                 </div>
 
                 <div class="project-container">
-                    <img class="img-projeto" src="./assets/imgs/cadastro.png" alt="Projeto Cadastro">
+                    <img class="img-projeto" src="./assets/projects_imgs/imgs/cadastro.png" alt="Projeto Cadastro">
                     <div class="project-info">
                         <h3>Tela Cadastro</h3>
                         <img alt="svgHtml" class="lang-icon" src="./assets/svgs/html.svg">
@@ -196,7 +196,7 @@
                     </div>
                 </div>
                 <div class="project-container">
-                    <img class="img-projeto" src="./assets/imgs/slider.png" alt="Projeto Slider JS">
+                    <img class="img-projeto" src="./assets/projects_imgs/imgs/slider.png" alt="Projeto Slider JS">
                     <div class="project-info">
                         <h3>Slider</h3>
                         <img alt="svgHtml" class="lang-icon" src="./assets/svgs/html.svg">
@@ -209,7 +209,7 @@
                     </div>
                 </div>
                 <div class="project-container">
-                    <img class="img-projeto" src="./assets/imgs/relogio.png" alt="Projeto Relógio com JS">
+                    <img class="img-projeto" src="./assets/projects_imgs//relogio.png" alt="Projeto Relógio com JS">
                     <div class="project-info">
                         <h3>Relógio Digital</h3>
                         <img alt="svgJs" class="lang-icon" src="./assets/svgs/js.svg">
