--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
                     <img class="img-projeto" src="./assets/imgs/projects_imgs/quimicafacil.png" alt="Projeto QuimicaFacil">
                     <div class="project-info">
                         <h3>QuimicaFacil</h3>
-                        <img alt="svgHtml" class="lang-icon" src="./assets/svgs/html.svg">
-                        <img alt="svgCss" class="lang-icon" src="./assets/svgs/css.svg">
-                        <img alt="svgJs" class="lang-icon" src="./assets/svgs/js.svg">
+                        <i class="devicon-html5-plain"></i>
+                        <i class="devicon-css3-plain"></i>  
+                        <i class="devicon-javascript-plain"></i>
                     </div>
                     <div class="link-container">
                         <a href="https://github.com/xDef4lt/quimicafacil"  target="_blank" class="botao-link">Acessar código</a>
@@ -160,8 +160,8 @@
                     <img class="img-projeto" src="./assets/imgs/projects_imgs/login.png" alt="Projeto Tela de Login">
                     <div class="project-info">
                         <h3>Tela de Login</h3>
-                        <img alt="svgHtml" class="lang-icon" src="./assets/svgs/html.svg">
-                        <img alt="svgCss" class="lang-icon" src="./assets/svgs/css.svg">
+                        <i class="devicon-html5-plain"></i>
+                        <i class="devicon-css3-plain"></i>  
                     </div>
                     <div class="link-container">
                         <a href="https://github.com/xDef4lt/login-animado" target="_blank" class="botao-link">Acessar código</a>
@@ -173,8 +173,9 @@
                     <img class="img-projeto" src="./assets/imgs/projects_imgs/calculadora.png" alt="Projeto Calculadora">
                     <div class="project-info">
                         <h3>Calculadora</h3>
-                        <img alt="svgHtml" class="lang-icon" src="./assets/svgs/html.svg">
-                        <img alt="svgJs" class="lang-icon" src="./assets/svgs/js.svg">
+                        <i class="devicon-html5-plain"></i>
+                        <i class="devicon-css3-plain"></i>  
+                        <i class="devicon-javascript-plain"></i>
                     </div>
                     <div class="link-container">
                         <a href="https://github.com/xDef4lt/calculadora-poo" target="_blank" class="botao-link">Acessar código</a>
@@ -186,9 +187,9 @@
                     <img class="img-projeto" src="./assets/imgs/projects_imgs/cadastro.png" alt="Projeto Cadastro">
                     <div class="project-info">
                         <h3>Tela Cadastro</h3>
-                        <img alt="svgHtml" class="lang-icon" src="./assets/svgs/html.svg">
-                        <img alt="svgCss" class="lang-icon" src="./assets/svgs/css.svg">
-                        <img alt="svgJs" class="lang-icon" src="./assets/svgs/js.svg">
+                        <i class="devicon-html5-plain"></i>
+                        <i class="devicon-css3-plain"></i>  
+                        <i class="devicon-javascript-plain"></i>
                     </div>
                     <div class="link-container">
                         <a href="https://github.com/xDef4lt/cadastro" target="_blank" class="botao-link">Acessar código</a>
@@ -199,9 +200,9 @@
                     <img class="img-projeto" src="./assets/imgs/projects_imgs/slider.png" alt="Projeto Slider JS">
                     <div class="project-info">
                         <h3>Slider</h3>
-                        <img alt="svgHtml" class="lang-icon" src="./assets/svgs/html.svg">
-                        <img alt="svgCss" class="lang-icon" src="./assets/svgs/css.svg">
-                        <img alt="svgJs" class="lang-icon" src="./assets/svgs/js.svg">
+                        <i class="devicon-html5-plain"></i>
+                        <i class="devicon-css3-plain"></i>  
+                        <i class="devicon-javascript-plain"></i>
                     </div>
                     <div class="link-container">
                         <a href="https://github.com/xDef4lt/slider-js" target="_blank" class="botao-link">Acessar código</a>
@@ -212,7 +213,8 @@
                     <img class="img-projeto" src="./assets/imgs/projects_imgs/relogio.png" alt="Projeto Relógio com JS">
                     <div class="project-info">
                         <h3>Relógio Digital</h3>
-                        <img alt="svgJs" class="lang-icon" src="./assets/svgs/js.svg">
+                        <i class="devicon-html5-plain"></i>
+                        <i class="devicon-javascript-plain"></i>
                     </div>
                     <div class="link-container">
                         <a href="https://github.com/xDef4lt/relogio" target="_blank" class="botao-link">Acessar código</a>
