--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>    
     <header>
         <button class="mobile-menu">
-            <i class="fa-solid fa-bars"></i>
+            <i class="fa-solid fa-bars menu-btn"></i>
         </button>
         
         <nav class="menu-wrap">
@@ -229,10 +229,10 @@
 
             <div class="slider">
                 <button class="slider-btn left" tabindex="1">
-                    <i class="fa-solid fa-circle-arrow-left"></i>
+                    <i class="fa-solid fa-circle-arrow-left arrow-btn-left"></i>
                 </button>
                 <button class="slider-btn right" tabindex="1">
-                    <i class="fa-solid fa-circle-arrow-right"></i>
+                    <i class="fa-solid fa-circle-arrow-right arrow-btn-right"></i>
                 </button>
 
                 <article class="slide active-right">
