--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
                     <img class="img-projeto" src="./assets/imgs/projects_imgs/login.png" alt="Projeto Tela de Login">
                     <div class="project-info">
                         <h3>Tela de Login</h3>
-                        <i class="devicon-html5-plain"></i>
-                        <i class="devicon-css3-plain"></i>  
+                        <i class="devicon-html5-plain gradient-icon"></i>
+                        <i class="devicon-css3-plain gradient-icon"></i>  
                     </div>
                     <div class="link-container">
                         <a href="https://github.com/xDef4lt/login-animado" target="_blank" class="botao-link">Acessar código</a>
@@ -173,9 +173,9 @@
                     <img class="img-projeto" src="./assets/imgs/projects_imgs/calculadora.png" alt="Projeto Calculadora">
                     <div class="project-info">
                         <h3>Calculadora</h3>
-                        <i class="devicon-html5-plain"></i>
-                        <i class="devicon-css3-plain"></i>  
-                        <i class="devicon-javascript-plain"></i>
+                        <i class="devicon-html5-plain gradient-icon"></i>
+                        <i class="devicon-css3-plain gradient-icon"></i>  
+                        <i class="devicon-javascript-plain gradient-icon"></i>
                     </div>
                     <div class="link-container">
                         <a href="https://github.com/xDef4lt/calculadora-poo" target="_blank" class="botao-link">Acessar código</a>
@@ -187,9 +187,9 @@
                     <img class="img-projeto" src="./assets/imgs/projects_imgs/cadastro.png" alt="Projeto Cadastro">
                     <div class="project-info">
                         <h3>Tela Cadastro</h3>
-                        <i class="devicon-html5-plain"></i>
-                        <i class="devicon-css3-plain"></i>  
-                        <i class="devicon-javascript-plain"></i>
+                        <i class="devicon-html5-plain gradient-icon"></i>
+                        <i class="devicon-css3-plain gradient-icon"></i>  
+                        <i class="devicon-javascript-plain gradient-icon"></i>
                     </div>
                     <div class="link-container">
                         <a href="https://github.com/xDef4lt/cadastro" target="_blank" class="botao-link">Acessar código</a>
@@ -200,9 +200,9 @@
                     <img class="img-projeto" src="./assets/imgs/projects_imgs/slider.png" alt="Projeto Slider JS">
                     <div class="project-info">
                         <h3>Slider</h3>
-                        <i class="devicon-html5-plain"></i>
-                        <i class="devicon-css3-plain"></i>  
-                        <i class="devicon-javascript-plain"></i>
+                        <i class="devicon-html5-plain gradient-icon"></i>
+                        <i class="devicon-css3-plain gradient-icon"></i>  
+                        <i class="devicon-javascript-plain gradient-icon"></i>
                     </div>
                     <div class="link-container">
                         <a href="https://github.com/xDef4lt/slider-js" target="_blank" class="botao-link">Acessar código</a>
@@ -213,8 +213,8 @@
                     <img class="img-projeto" src="./assets/imgs/projects_imgs/relogio.png" alt="Projeto Relógio com JS">
                     <div class="project-info">
                         <h3>Relógio Digital</h3>
-                        <i class="devicon-html5-plain"></i>
-                        <i class="devicon-javascript-plain"></i>
+                        <i class="devicon-html5-plain gradient-icon"></i>
+                        <i class="devicon-javascript-plain gradient-icon"></i>
                     </div>
                     <div class="link-container">
                         <a href="https://github.com/xDef4lt/relogio" target="_blank" class="botao-link">Acessar código</a>
