--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
                     <img class="img-projeto" src="./assets/imgs/projects_imgs/quimicafacil.png" alt="Projeto QuimicaFacil">
                     <div class="project-info">
                         <h3>QuimicaFacil</h3>
-                        <i class="devicon-html5-plain"></i>
-                        <i class="devicon-css3-plain"></i>  
-                        <i class="devicon-javascript-plain"></i>
+                        <i class="devicon-html5-plain gradient-icon"></i>
+                        <i class="devicon-css3-plain gradient-icon"></i>  
+                        <i class="devicon-javascript-plain gradient-icon"></i>
                     </div>
                     <div class="link-container">
                         <a href="https://github.com/xDef4lt/quimicafacil"  target="_blank" class="botao-link">Acessar código</a>
