--- a/index.html
+++ b/index.html
@@ -267,10 +267,10 @@
 
         <footer id="contacts">
             <div class="social">
-                <a href="https://github.com/xDef4lt" target="_blank"><i class="fa-brands fa-github"></i></a>            
-                <a href="https://www.linkedin.com/in/arthur-santos-3b61a8267/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
-                <a href="mailto:contato.arthursantosdev@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>             
-                <a href="https://wa.link/n2camg" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>          
+                <a href="https://github.com/xDef4lt" target="_blank"><i class="fa-brands fa-github gradient-icon"></i></a>            
+                <a href="https://www.linkedin.com/in/arthur-santos-3b61a8267/" target="_blank"><i class="fa-brands fa-linkedin-in gradient-icon"></i></a>
+                <a href="mailto:contato.arthursantosdev@gmail.com" target="_blank"><i class="fa-solid fa-envelope gradient-icon"></i></a>             
+                <a href="https://wa.link/n2camg" target="_blank"><i class="fa-brands fa-whatsapp gradient-icon"></i></a>          
             </div>
         </footer>
     </div>
