--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>    
     <header>
         <button class="mobile-menu">
-            <i class="fa-solid fa-bars menu-btn"></i>
+            <i class="fa-solid fa-bars gradient-icon"></i>
         </button>
         
         <nav class="menu-wrap">
