--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
             <div class="slider">
                 <button class="slider-btn left" tabindex="1">
-                    <i class="fa-solid fa-circle-arrow-left arrow-btn-left"></i>
+                    <i class="fa-solid fa-circle-arrow-left arrow-btn-left gradient-icon"></i>
                 </button>
                 <button class="slider-btn right" tabindex="1">
                     <i class="fa-solid fa-circle-arrow-right arrow-btn-right"></i>
