--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         
         <nav class="menu-wrap">
             <ul class="menu">
-                <li class="menu-item" tabindex="0"><a href="#about">Sobre</a></li>
-                <li class="menu-item" tabindex="0"><a href="#skills">Conhecimentos</a></li>
-                <li class="menu-item" tabindex="0"><a href="#projects">Projetos</a></li>
-                <li class="menu-item" tabindex="0"><a href="#services">Serviços</a></li>
+                <li class="menu-item"><a href="#about">Sobre</a></li>
+                <li class="menu-item"><a href="#skills">Conhecimentos</a></li>
+                <li class="menu-item"><a href="#projects">Projetos</a></li>
+                <li class="menu-item"><a href="#services">Serviços</a></li>
             </ul>
         </nav>
 
@@ -57,11 +57,11 @@
                     <h1>Prazer, <wbr> <span>Arthur Santos</span></h1>
                     <h2 data-anima-texto>Desenvolvedor Web</h2>
                     <div class="btn-container">
-                        <a href="#" class="botao-contato btn-gradient" tabindex="1" id="download-cv">
+                        <a href="#" class="botao-contato btn-gradient" id="download-cv">
                             <span lang="en-us">Download</span> 
                             <abbr title="Currículo Virtual">C/V</abbr>
                         </a>
-                        <a href="https://www.linkedin.com/in/arthur-santos-3b61a8267/" target="_blank" class="botao-contato" id="gradient-hover" tabindex="1">
+                        <a href="https://www.linkedin.com/in/arthur-santos-3b61a8267/" target="_blank" class="botao-contato" id="gradient-hover">
                             LinkedIn
                         </a>
                     </div>
@@ -228,11 +228,11 @@
             <h2 class="heading">Serviços</h2>
 
             <div class="slider">
-                <button class="slider-btn left" tabindex="1">
+                <button class="slider-btn left">
                     <i class="fa-solid fa-circle-arrow-left arrow-btn-left gradient-icon"></i>
                 </button>
-                <button class="slider-btn right" tabindex="1">
-                    <i class="fa-solid fa-circle-arrow-right arrow-btn-right"></i>
+                <button class="slider-btn right">
+                    <i class="fa-solid fa-circle-arrow-right arrow-btn-right gradient-icon"></i>
                 </button>
 
                 <article class="slide active-right">
@@ -275,7 +275,7 @@
         </footer>
     </div>
 
-    <button class="back-top-btn hidden" tabindex="0">
+    <button class="back-top-btn hidden">
         <i class="fa-solid fa-arrow-up"></i>
     </button>
 
